# go

./: Cargo.toml
game/: Cargo.toml
game/benches/: game.rs
game/src/: analysis.rs  game.rs  gamelog.rs  group_stones.rs  lib.rs  sgf_parser.rs  testutils.rs
game/src/board/: board.rs  error.rs  mod.rs  player.rs  pos.rs
game/src/group_stones/: algorithm.rs  group_id.rs  grouped_stones.rs  mod.rs  union_find.rs
game/src/utils/: ints.rs  mod.rs  small_set.rs
game/tests/: 3bw-gokifu-han-chongjin-le-changho.rs  3bw-gokifu.rs  3bw-lee-changseok-park-jungwhan.rs  sixteen_soldiers.rs  sixteen_soldiers.sgf
src/: lib.rs
src/board/: board.rs  mod.rs
tui/: Cargo.toml
tui/src/: app.rs  board_widget.rs  game_widget.rs  lib.rs  main.rs
