[workspace]
members = ["game", "tui"]
resolver = "3"

[workspace.package]
authors = ["Sebastian Messmer <mail@smessmer.de>"]
edition = "2024"
license = "LGPL-3.0-or-later"
readme = "README.md"
version = "0.1.1"

[workspace.dependencies]
bitvec = "^1.0.1"
derive_more = {version = "^2.0.1", features = ["error", "display"]}
ratatui = "^0.28.0"
color-eyre = "^0.6.3"
crossterm = "^0.28.1"
smallset = "^0.1.1"
enum-map = "^2.7.3"

[profile.release]
lto = "fat"
