[workspace]
members = ["game", "tui"]
resolver = "3"

[workspace.package]
authors = ["Sebastian Messmer <mail@smessmer.de>"]
edition = "2024"
license = "LGPL-3.0-or-later"
readme = "README.md"
version = "0.1.1"

[workspace.dependencies]
anyhow = "^1.0.97"
bitvec = "^1.0.1"
derive_more = {version = "^2.0.1", features = ["error", "display"]}
ratatui = "^0.29.0"
color-eyre = "^0.6.3"
crossterm = "^0.28.1"
enum-map = "^2.7.3"
derive-where = "^1.2.7"
actually_beep = "^0.1.1"
tui-logger = "^0.17.0"
log = "^0.4.27"
sgf-parse = "^4.2.2"
itertools = "^0.14.0"
common_macros = "^0.1.1"
pretty_assertions = "^1.4.1"
criterion = "^0.5.1"
smallvec = "^1.15.0"

[profile.release]
lto = "fat"
