[package]
name = "go-game"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
bitvec.workspace = true
derive_more = {workspace = true, features = ["error", "debug", "display", "add", "add_assign"]}
smallset.workspace = true
enum-map.workspace = true
derive-where.workspace = true