[package]
name = "go-game"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
bitvec.workspace = true
derive_more = {workspace = true, features = ["error", "debug", "display", "add", "add_assign", "from_str"]}
smallset.workspace = true
enum-map.workspace = true
derive-where.workspace = true
sgf-parse.workspace = true
anyhow.workspace = true
itertools.workspace = true
common_macros.workspace = true

[dev-dependencies]
criterion.workspace = true
pretty_assertions.workspace = true

[[bench]]
name = "game"
harness = false
