[package]
name = "go-tui"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
go-game = { path = "../game" }
ratatui.workspace = true
color-eyre.workspace = true
crossterm.workspace = true
bitvec.workspace = true
actually_beep.workspace = true
tui-logger.workspace = true
log.workspace = true